--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,26 @@
   text-align: center;
 }
 
+.hero-image {
+  background-image: URL('https://helenaagustsson.github.io/uni-data/images/hero.jpg');
+                /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
