--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,17 @@
   text-align: center;
 }
 
+.hero-container {
+  background-color: black;
+  height: 320px;
+}
+
 .hero-image {
   background-image: URL('https://helenaagustsson.github.io/uni-data/images/hero.jpg');
                 /* Full height */
-  height: 100%;
-
+  height: 320px;
+  
+  opacity: 0.7;
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
@@ -14,12 +20,15 @@
 }
 
 .hero-text {
-  text-align: center;
+  text-align: left;
   position: absolute;
-  top: 50%;
+  top: 18%;
   left: 50%;
   transform: translate(-50%, -50%);
+  color: black;
   color: white;
+  font-weight: 900;
+  font-size: 1rem;
 }
 
 .App-logo {
